--- a/src/components/TopPanel.css
+++ b/src/components/TopPanel.css
@@ -8,7 +8,7 @@
   top: 0em;
   left: 0em;
   z-index: 20;
-  width: 100%;
+  width: 100vw;
   height: 70px;
   /* padding: 1em; */
   border-bottom: solid 1px rgba(255,255,255,.2);
